--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,18 @@ body{
   font-family: Lato;
 }
 
+@media screen and (max-width: 600px) {
+  div.bg {
+    display: none;
+  }
+  div.card {
+    margin-top: 15rem;
+  }
+  div.announceImg{
+    margin-left: -60px;
+  }
+}
+
 .navbar-custom .navbar-nav .nav-link {
     color: black;
 }
@@ -84,7 +96,6 @@ body{
 .bgs {
   width:100%;
   height:20rem;
- 
 }
 
 .top-sec {
@@ -139,7 +150,7 @@ body{
   text-align: center;
   text-decoration: none;
   font-size: .8rem;
-  margin-top:2rem;
+  margin-top: 1rem;
 }
 
 .buttonA:hover {
@@ -148,14 +159,14 @@ body{
   }
 
 .announce{
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-weight: 500;
   text-align: center;
-  padding: 180px;
+  padding: 100px;
   background-color: #00ace6;
   color: white;
- max-height:10rem;
 }
+
 .animg {
     max-height: 20rem;
     max-width: 100rem;
@@ -196,11 +207,11 @@ body{
     padding-bottom:4rem;
     }
 
-    .achieves h1 {
-        font-size: 1.5rem;
-        font-weight: bold;
-        margin: 2rem -2px 2rem 0;
-    }
+.achieves h1 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 2rem -2px 2rem 0;
+}
 
 .icon-container {
     width: 6rem;
@@ -212,13 +223,14 @@ body{
     transform: rotate(45deg);
 }
 
-    .icon-container i {
-        color: #374785;
-        border: #ffe838;
-        font-size: 2rem;
-        margin: auto;
-        transform: rotate(-45deg);
-    }
+.icon-container i {
+  color: #374785;
+  border: #ffe838;
+  font-size: 2rem;
+  margin: auto;
+  transform: rotate(-45deg);
+}
+
 .darkmode-layer, .darkmode-toggle {
     z-index: 500;
 }
