--- a/css/teams.css
+++ b/css/teams.css
@@ -1,24 +1,25 @@
 body, html {
   height: 100%;
   margin: 0;
+  overflow-x: hidden;
 }
 
 body{
   font-family: Lato;
 }
-
 .navbar-custom .navbar-nav .nav-link {
     color: black;
 }
 
-.nav-item{
-  padding-left: 20px;
-  font-size: 120%;
+.nav-item {
+    padding-left: 20px;
+    font-size: 0.9rem;
 }
 
 .navbar {
-    min-height: 60px;
-    margin: 50px;
+    min-height: 80px;
+    padding-right: 1rem;
+    padding-left: 1rem;
     margin-top: 0;
     padding-top: 30px;
     background-color: white;
@@ -29,36 +30,60 @@ body{
     color: #33adff;
     font-style: italic;
     font-weight: bold;
-    font-size: 200%;
+    font-size: 250%;
 }
 
-.bg {
-  background-image:url("https://teamsdemo.office.com/img/closing-image.png");
-  height: 50%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin-top: 15%;
+
+.bgs {
+    width:100%;
+ max-height: 22rem;
+ margin-top: 2rem;
 }
 
-.Team h1{
-  font-size: 64px;
-  text-align: center;
-  padding-top: 100px;
-  padding-bottom: 100px;
+.Team h1 {
+    font-size: 2rem;
+    font-family: 'Antic Slab', serif;
+    text-align: center;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
 }
 
 .rounded-circle{
-  width: 60%;
+  width: 35%;
 }
 
-.pictures h2{
-  font-weight: bold;
+.pictures h2 {
+    font-size:1rem;
+    font-family: 'Antic Slab', serif;
+    font-weight: bold;
 }
 
-.page-footer{
-  background-color: #ff4d94;
-  text-align: center;
-  padding-top: 25px;
-  color: white;
+.page-footer {
+    margin-bottom: 0;
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    max-height: 15rem;
+    background-color: #ff4d94;
+    text-align: center;
+    color: white;
+}
+.darkmode-layer, .darkmode-toggle {
+    z-index: 500;
+}
+
+.darkmode--activated img, .page-footer {
+    mix-blend-mode: difference;
+}
+
+.darkmode--activated nav {
+    background-color: black;
+}
+
+.darkmode--activated a {
+    color: white;
+}
+
+.darkmode--activated nav-link {
+    color: white;
 }
