--- a/css/forms.css
+++ b/css/forms.css
@@ -21,7 +21,7 @@ label {
 
 .forms{
   border-radius: 2rem;
-  background-color: #00cc99;
+  background-color: #b3b3b3;
   padding-left: 80px;
   padding-right: 80px;
   padding-top: 20px;
