--- a/css/teams.css
+++ b/css/teams.css
@@ -1,89 +1,453 @@
-body, html {
+body,
+html {
   height: 100%;
   margin: 0;
   overflow-x: hidden;
 }
 
-body{
+body {
   font-family: Lato;
 }
 .navbar-custom .navbar-nav .nav-link {
-    color: black;
+  color: black;
 }
 
 .nav-item {
-    padding-left: 20px;
-    font-size: 0.9rem;
+  padding-left: 20px;
+  font-size: 0.9rem;
 }
 
 .navbar {
-    min-height: 80px;
-    padding-right: 1rem;
-    padding-left: 1rem;
-    margin-top: 0;
-    padding-top: 30px;
-    background-color: white;
+  min-height: 80px;
+  padding-right: 1rem;
+  padding-left: 1rem;
+  margin-top: 0;
+  padding-top: 30px;
+  background-color: white;
 }
 
 .navbar-custom .navbar-brand,
 .navbar-custom .navbar-text {
-    color: #33adff;
-    font-style: italic;
-    font-weight: bold;
-    font-size: 250%;
+  color: #33adff;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 250%;
 }
 
-
 .bgs {
-    width:100%;
- max-height: 22rem;
- margin-top: 2rem;
+  width: 100%;
+  max-height: 22rem;
+  margin-top: 2rem;
 }
 
 .Team h1 {
-    font-size: 2rem;
-    font-family: 'Antic Slab', serif;
-    text-align: center;
-    padding-top: 5rem;
-    padding-bottom: 5rem;
+  font-size: 2rem;
+  font-family: "Antic Slab", serif;
+  text-align: center;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 
-.rounded-circle{
+.rounded-circle {
   width: 35%;
+  position: relative;
 }
 
 .pictures h2 {
-    font-size:1rem;
-    font-family: 'Antic Slab', serif;
-    font-weight: bold;
+  font-size: 1rem;
+  font-family: "Antic Slab", serif;
+  font-weight: bold;
 }
 
 .page-footer {
-    margin-bottom: 0;
-    width: 100%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    max-height: 15rem;
-    background-color: #ff4d94;
-    text-align: center;
-    color: white;
+  margin-bottom: 0;
+  width: 100%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  max-height: 15rem;
+  background-color: #ff4d94;
+  text-align: center;
+  color: white;
 }
-.darkmode-layer, .darkmode-toggle {
-    z-index: 500;
+.darkmode-layer,
+.darkmode-toggle {
+  z-index: 500;
 }
 
-.darkmode--activated img, .page-footer {
-    mix-blend-mode: difference;
+.darkmode--activated img,
+.page-footer {
+  mix-blend-mode: difference;
 }
 
 .darkmode--activated nav {
-    background-color: black;
+  background-color: black;
 }
 
 .darkmode--activated a {
-    color: white;
+  color: white;
 }
 
 .darkmode--activated nav-link {
-    color: white;
+  color: white;
+}
+
+.my-5 {
+  margin-top: -100px;
+}
+
+.smdetails1 {
+  width: 250px;
+  height: 300px;
+  background-color: skyblue;
+  display: none;
+  position: absolute;
+  margin-left: 120px;
+  border-radius: 10px;
+  margin-top: -300px;
+  padding-top: 30px;
+  padding: 5%;
+  margin-bottom: 105px;
+  font-size: 19px;
+  box-shadow: 5px 5px 5px 5px grey;
+  font-family: ;
+  z-index: 100;
+}
+.smdetails2 {
+  width: 250px;
+  height: 300px;
+  background-color: skyblue;
+  display: none;
+  position: absolute;
+  margin-left: 120px;
+  border-radius: 10px;
+  margin-top: -300px;
+  padding-top: 30px;
+  padding: 5%;
+  margin-bottom: 105px;
+  font-size: 19px;
+  box-shadow: 5px 5px 5px 5px grey;
+  font-family: ;
+  z-index: 100;
+}
+
+.smdetails3 {
+  width: 250px;
+  height: 300px;
+  background-color: skyblue;
+  display: none;
+  position: absolute;
+  margin-left: 120px;
+  border-radius: 10px;
+  margin-top: -300px;
+  padding-top: 30px;
+  padding: 5%;
+  margin-bottom: 105px;
+  font-size: 19px;
+  box-shadow: 5px 5px 5px 5px grey;
+  font-family: ;
+  z-index: 100;
+}
+.smdetails4 {
+  width: 250px;
+  height: 300px;
+  background-color: skyblue;
+  display: none;
+  position: absolute;
+  margin-left: 120px;
+  border-radius: 10px;
+  margin-top: -300px;
+  padding-top: 30px;
+  padding: 5%;
+  margin-bottom: 105px;
+  font-size: 19px;
+  box-shadow: 5px 5px 5px 5px grey;
+  font-family: ;
+  z-index: 100;
+}
+.smdetails5 {
+  width: 250px;
+  height: 300px;
+  background-color: skyblue;
+  display: none;
+  position: absolute;
+  margin-left: 120px;
+  border-radius: 10px;
+  margin-top: -300px;
+  padding-top: 30px;
+  padding: 5%;
+  margin-bottom: 105px;
+  font-size: 19px;
+  box-shadow: 5px 5px 5px 5px grey;
+  font-family: ;
+  z-index: 100;
+}
+.smdetails6 {
+  width: 250px;
+  height: 300px;
+  background-color: skyblue;
+  display: none;
+  position: absolute;
+  margin-left: 120px;
+  border-radius: 10px;
+  margin-top: -300px;
+  padding-top: 30px;
+  padding: 5%;
+  margin-bottom: 105px;
+  font-size: 19px;
+  box-shadow: 5px 5px 5px 5px grey;
+  font-family: ;
+  z-index: 100;
+}
+.smdetails7 {
+  width: 250px;
+  height: 300px;
+  background-color: skyblue;
+  display: none;
+  position: absolute;
+  margin-left: 120px;
+  border-radius: 10px;
+  margin-top: -300px;
+  padding-top: 30px;
+  padding: 5%;
+  margin-bottom: 105px;
+  font-size: 19px;
+  box-shadow: 5px 5px 5px 5px grey;
+  font-family: ;
+  z-index: 100;
+}
+.smdetails8 {
+  width: 250px;
+  height: 300px;
+  background-color: skyblue;
+  display: none;
+  position: absolute;
+  margin-left: 120px;
+  border-radius: 10px;
+  margin-top: -300px;
+  padding-top: 30px;
+  padding: 5%;
+  margin-bottom: 105px;
+  font-size: 19px;
+  box-shadow: 5px 5px 5px 5px grey;
+  font-family: ;
+  z-index: 100;
+}
+.smdetails9 {
+  width: 250px;
+  height: 300px;
+  background-color: skyblue;
+  display: none;
+  position: absolute;
+  margin-left: 120px;
+  border-radius: 10px;
+  margin-top: -300px;
+  padding-top: 30px;
+  padding: 5%;
+  margin-bottom: 105px;
+  font-size: 19px;
+  box-shadow: 5px 5px 5px 5px grey;
+  font-family: ;
+  z-index: 100;
+}
+.namesm {
+  margin-top: 20px;
+}
+#smbtn1 {
+  margin-top: 45px;
+  border-radius: 20px;
+  text-decoration: none;
+  border-style: none;
+  background-color: grey;
+  color: black;
+  margin-bottom: 80px;
+}
+#smbtn2 {
+  margin-top: 45px;
+  border-radius: 20px;
+  text-decoration: none;
+  border-style: none;
+  background-color: grey;
+  color: black;
+  margin-bottom: 80px;
+}
+#smbtn3 {
+  margin-top: 45px;
+  border-radius: 20px;
+  text-decoration: none;
+  border-style: none;
+  background-color: grey;
+  color: black;
+  margin-bottom: 80px;
+}
+#smbtn4 {
+  margin-top: 45px;
+  border-radius: 20px;
+  text-decoration: none;
+  border-style: none;
+  background-color: grey;
+  color: black;
+  margin-bottom: 80px;
+}
+#smbtn5 {
+  margin-top: 45px;
+  border-radius: 20px;
+  text-decoration: none;
+  border-style: none;
+  background-color: grey;
+  color: black;
+  margin-bottom: 80px;
+}
+#smbtn6 {
+  margin-top: 45px;
+  border-radius: 20px;
+  text-decoration: none;
+  border-style: none;
+  background-color: grey;
+  color: black;
+  margin-bottom: 80px;
+}
+#smbtn7 {
+  margin-top: 45px;
+  border-radius: 20px;
+  text-decoration: none;
+  border-style: none;
+  background-color: grey;
+  color: black;
+  margin-bottom: 80px;
+}
+#smbtn8 {
+  margin-top: 45px;
+  border-radius: 20px;
+  text-decoration: none;
+  border-style: none;
+  background-color: grey;
+  color: black;
+  margin-bottom: 80px;
+}
+#smbtn9 {
+  margin-top: 45px;
+  border-radius: 20px;
+  text-decoration: none;
+  border-style: none;
+  background-color: grey;
+  color: black;
+  margin-bottom: 80px;
+}
+.close1 {
+  position: absolute;
+  transform: rotate(45deg);
+  font-size: 30px;
+  margin-left: 200px;
+  margin-top: -20px;
+  cursor: pointer;
+}
+.close2 {
+  position: absolute;
+  transform: rotate(45deg);
+  font-size: 30px;
+  margin-left: 200px;
+  margin-top: -20px;
+  cursor: pointer;
+}
+.close3 {
+  position: absolute;
+  transform: rotate(45deg);
+  font-size: 30px;
+  margin-left: 200px;
+  margin-top: -20px;
+  cursor: pointer;
+}
+.close4 {
+  position: absolute;
+  transform: rotate(45deg);
+  font-size: 30px;
+  margin-left: 200px;
+  margin-top: -20px;
+  cursor: pointer;
+}
+.close5 {
+  position: absolute;
+  transform: rotate(45deg);
+  font-size: 30px;
+  margin-left: 200px;
+  margin-top: -20px;
+  cursor: pointer;
+}
+.close6 {
+  position: absolute;
+  transform: rotate(45deg);
+  font-size: 30px;
+  margin-left: 200px;
+  margin-top: -20px;
+  cursor: pointer;
+}
+.close7 {
+  position: absolute;
+  transform: rotate(45deg);
+  font-size: 30px;
+  margin-left: 200px;
+  margin-top: -20px;
+  cursor: pointer;
+}
+.close8 {
+  position: absolute;
+  transform: rotate(45deg);
+  font-size: 30px;
+  margin-left: 200px;
+  margin-top: -20px;
+  cursor: pointer;
+}
+.close9 {
+  position: absolute;
+  transform: rotate(45deg);
+  font-size: 30px;
+  margin-left: 200px;
+  margin-top: -20px;
+  cursor: pointer;
+}
+
+.smdeg1 {
+  position: absolute;
+  margin-left: 193px;
+  margin-top: 10px;
+}
+
+.smdeg {
+  position: absolute;
+  margin-left: 175px;
+  margin-top: 10px;
+}
+
+.social-menu ul {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 0;
+  margin: 0;
+  display: flex;
+  margin-top: 120px;
+  cursor: pointer;
+}
+.social-menu ul li {
+  list-style: none;
+  margin: 0 10px;
+}
+.social-menu ul li .fa {
+  color: #000000;
+  font-size: 20px;
+  line-height: 50px;
+  transition: 0.5s;
+}
+.social-menu ul li a {
+  position: relative;
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: white;
+  text-align: center;
+  transition: 0.5s;
+  transform: translate(0, 0px);
+  box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.5);
 }
