--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 html,
 body {
   height: 100%;
-  font-family: "Libre Franklin", sans-serif;
+  font-family: "Poppins", sans-serif;
+
   -webkit-font-smoothing: antialiased;
   width: 100%;
 
@@ -17,7 +18,7 @@ h6 {
   margin: 0;
   color: #111111;
   font-weight: 400;
-  font-family: "Libre Franklin", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 h1 {
@@ -46,7 +47,8 @@ h6 {
 
 p {
   font-size: 16px;
-  font-family: "Libre Franklin", sans-serif;
+  font-family: "Poppins", sans-serif;
+
   font-weight: 400;
   line-height: 26px;
   margin: 0 0 15px 0;
@@ -74,7 +76,7 @@ ol {
   padding: 0;
   margin: 0;
 }
-#typeit{
+#typeit {
   font-size: 8vw;
   font-weight: bold;
   color: rgb(247, 95, 39);
@@ -83,8 +85,8 @@ ol {
 /*-------------------
 About 
 --------------------*/
-.about{
-  background-color: #F5F5F5;
+.about {
+  background-color: #f5f5f5;
 }
 
 /*-----------
@@ -94,7 +96,7 @@ Nav bar
   background-color: #f47621 !important;
   color: #fff !important;
 }
-.navbar a{
+.navbar a {
   color: white;
   font-weight: bold;
   font-size: 12px;
@@ -113,7 +115,7 @@ Nav bar
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
 }
 /*---------------------
   Header
@@ -129,7 +131,7 @@ Nav bar
 
 .main-menu {
   text-align: right;
-  padding:30px;
+  padding: 30px;
 }
 
 .fa {
@@ -393,32 +395,32 @@ Parallax section
 .parallax1 {
   background-image: url("https://www.gssoc.tech/images/0.jpg");
   width: 100%;
-  height: 400px; 
+  height: 400px;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-} 
+}
 
-.parashadow{
+.parashadow {
   background: white;
   position: relative;
- -webkit-filter: grayscale(100%);
- filter: grayscale(100%);
- opacity: 0.4;
- height: 400px;
- width: 100%;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  opacity: 0.4;
+  height: 400px;
+  width: 100%;
 }
 
 /*------------------
   Join Us Section
 -------------------- */
 
-.newsection{
+.newsection {
   background-color: white;
 }
 
-.joinbtn{
+.joinbtn {
   padding: 18px 40px;
   font-size: 16px;
   border: none;
@@ -431,7 +433,7 @@ Parallax section
   color: white;
 }
 
-.joinbtn:hover{
+.joinbtn:hover {
   color: #111111;
   background-color: white;
   border: 2px solid black;
@@ -439,7 +441,6 @@ Parallax section
 
 .joinbox {
   position: relative;
-
 }
 
 .joinimage {
@@ -462,8 +463,8 @@ Parallax section
   -webkit-transform: scale(0);
   -ms-transform: scale(0);
   transform: scale(0);
-  -webkit-transition: .3s ease;
-  transition: .3s ease;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
   border-radius: 50%;
 }
 
@@ -485,12 +486,12 @@ Parallax section
   text-align: center;
 }
 
-.jointext a{
-  color:white;
+.jointext a {
+  color: white;
   text-decoration: none;
 }
 
-.jointext a:hover{
+.jointext a:hover {
   opacity: 0.7;
 }
 
@@ -520,47 +521,47 @@ Parallax section
   margin-bottom: 45px;
 }
 
-
 /*---------------------
  Team Section
  ----------------------*/
- .team-section {
-	background:white;
-	padding: 50px;
-}	
+.team-section {
+  background: white;
+  padding: 50px;
+}
 
- .team-card {
-	background-color: transparent;
-	width: 300px;
-	height: 400px;
-	perspective: 1000px;
-  }
+.team-card {
+  background-color: transparent;
+  width: 300px;
+  height: 400px;
+  perspective: 1000px;
+}
 
-  .team-card-inner {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	text-align: center;
-	transition: transform 0.6s;
-	transform-style: preserve-3d;
-	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  }
+.team-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
 
-  .team-card:hover .team-card-inner {
-	transform: rotateY(180deg);
-  }
+.team-card:hover .team-card-inner {
+  transform: rotateY(180deg);
+}
 
-  .team-card-front, .team-card-back {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	-webkit-backface-visibility: hidden;
-	backface-visibility: hidden;
-  }
+.team-card-front,
+.team-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
 
-  .team-card-back {
-	transform: rotateY(180deg);
-  }
+.team-card-back {
+  transform: rotateY(180deg);
+}
 
 /*---------------------
   Footer
@@ -628,7 +629,6 @@ Parallax section
   border-radius: 50%;
 }
 
-
 .footer-option .fo-social a:hover {
   background: #e32879;
   font-size: 45px;
@@ -646,11 +646,9 @@ Parallax section
   background-size: 100% 100%;
   clip-path: polygon(100% 0%, 100% 77%, 50% 100%, 0 75%, 0 0);
   position: relative;
-
 }
-.d a:hover{
-	background-color:#0e76a8 ;
-
+.d a:hover {
+  background-color: #0e76a8;
 }
 
 .header::before {
@@ -665,13 +663,12 @@ Parallax section
   background: linear-gradient(to right, #1e5799 0%, #3ccdbb 0%, #16c9f6 100%);
 }
 
-
 .header-section {
   width: 100%;
 
   color: white;
   text-align: center;
- 
+
   /*background-image: url("https://images.unsplash.com/photo-1502957291543-d85480254bf8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80");*/
   background-color: white;
 }
@@ -705,12 +702,12 @@ Parallax section
   transform: translateY(-7px);
 }
 
-footer{
+footer {
   background: #232323;
   padding: 70px 0;
 }
 
-.footer-container{
+.footer-container {
   max-width: 1300px;
   margin: auto;
   padding: 0 20px;
@@ -720,71 +717,66 @@ footer{
   flex-wrap: wrap-reverse;
 }
 
-.logo{
+.logo {
   width: 180px;
 }
 
-.social-media{
-margin-top: 5%;;
-
+.social-media {
+  margin-top: 5%;
 }
-.footer-h2{
+.footer-h2 {
   margin-top: 2%;
- color: #c4c4c4;
+  color: #c4c4c4;
 }
-.footer-h3{
+.footer-h3 {
   margin-top: 2%;
   color: #c4c4c4;
 }
 
-.social-media a{
-  color:white;
+.social-media a {
+  color: white;
   margin-right: 25px;
   font-size: 22px;
   text-decoration: none;
-  
 }
 
-.social-media a:hover{
+.social-media a:hover {
   color: orangered;
   font-size: 26px;
-
 }
-.fa-twitter a:hover{
+.fa-twitter a:hover {
   color: #fc5c65;
   font-size: 26px;
-
 }
 
 .btn-spl {
   border-radius: 10em;
   color: white;
   border-color: orangered;
-  margin: 1rem;width: 150px;
+  margin: 1rem;
+  width: 150px;
   height: 40px;
+}
 
- }
-
-.right-col h1{
+.right-col h1 {
   font-size: 26px;
 }
 
-
-.border{
+.border {
   width: 200px;
   height: 5px;
   background: orangered;
   color: orangered;
- border-style: none !important;
+  border-style: none !important;
 }
-.footer-p{
+.footer-p {
   margin-top: 1%;
 }
-.footer-h{
+.footer-h {
   color: #c4c4c4;
 }
 
-.newsletter-form{
+.newsletter-form {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -792,7 +784,7 @@ margin-top: 5%;;
   margin-top: 2%;
 }
 
-.txtb{
+.txtb {
   flex: 1;
   padding: 18px 40px;
   font-size: 16px;
@@ -805,7 +797,7 @@ margin-top: 5%;;
   min-width: 260px;
 }
 
-.page-content{
+.page-content {
   min-height: 100vh;
   font-size: 40px;
   display: flex;
@@ -815,7 +807,6 @@ margin-top: 5%;;
 /*footer {
   background-color: orangered;
 }*/
-
 
 .loc {
   background-image: url("https://toppng.com/uploads/preview/textured-backgrounds-for-websites-1155398483840bc0kagkc.jpg") !important;
@@ -847,7 +838,6 @@ margin-top: 5%;;
   border: 4px solid transparent;
 }
 
-
 .card:hover {
   -webkit-box-shadow: -1px 9px 40px -12px rgba(65, 232, 234, 0.75);
   -moz-box-shadow: -1px 9px 40px -12px rgba(0, 0, 0, 0.75);
@@ -856,7 +846,7 @@ margin-top: 5%;;
   transition: all 0.2s ease-out;
 }
 
-.mt-5 h2{
+.mt-5 h2 {
   text-align: center;
   color: #ff9933;
   padding-bottom: 20px;
@@ -864,32 +854,31 @@ margin-top: 5%;;
   letter-spacing: normal;
 }
 
-.mt-5 button{
+.mt-5 button {
   margin: auto;
   display: block;
   color: white;
-  background-color:#ff9933 ;
+  background-color: #ff9933;
 }
 
-.card-title{
+.card-title {
   text-align: center;
-  color:#ff9933;
+  color: #ff9933;
   font-weight: bold;
   letter-spacing: normal;
 }
 
-.card-text{
+.card-text {
   text-align: justify;
   color: #e32879;
 }
 
-.ab
-out--part1 {
+.ab out--part1 {
   opacity: 0;
 }
 
 .about--part1.animated {
-    opacity: 1;
+  opacity: 1;
 }
 
 .stat {
@@ -912,37 +901,37 @@ out--part1 {
   Tiny Slider
 -----------------------*/
 
-.myslider{
+.myslider {
   background-color: #e32879;
 }
 
-.myslider div{
+.myslider div {
   padding-bottom: 20px;
 }
 
-.myslider h2{
-  color:#fff;
+.myslider h2 {
+  color: #fff;
   text-align: center;
   font-weight: bold;
   padding: 20px;
 }
 
-.slider{
+.slider {
   padding-top: 20px;
   padding-bottom: 20px;
 }
 
-.slider-item img{
+.slider-item img {
   height: 150px;
   width: 150px;
 }
 
-.tns-controls{
+.tns-controls {
   display: none;
 }
 
-li.tns-item{
-  text-align:center;
+li.tns-item {
+  text-align: center;
 }
 
 /*---------------------
@@ -952,20 +941,20 @@ li.tns-item{
   Overview
 -----------------------*/
 
-#overview{
+#overview {
   /* background-color: #e32879; */
   margin-top: 30px;
   text-align: center;
 }
 
-#overview p{
+#overview p {
   /* margin-top: 10px; */
   padding: 30px;
   color: #e32879;
   text-align: justify;
 }
 
-#overview h3{
+#overview h3 {
   color: #e32879;
   font-size: 42px;
   font-weight: 500;
@@ -976,7 +965,7 @@ li.tns-item{
   Keynote
 -----------------------*/
 
-#key-note{
+#key-note {
   text-align: center;
   margin: auto;
   display: block;
@@ -984,16 +973,16 @@ li.tns-item{
   /* background-color: #ff9933; */
 }
 
-#key-note h3{
+#key-note h3 {
   font-size: 40px;
-  color:  #ff9933;;
+  color: #ff9933;
   font-weight: bold;
   letter-spacing: normal;
 }
 
-#key-note p{
+#key-note p {
   text-align: justify;
-  color:  #ff9933;
+  color: #ff9933;
   padding-top: 50px;
   font-size: 18px;
   margin: auto;
@@ -1004,7 +993,7 @@ li.tns-item{
   Location
 -----------------------*/
 
-.location{
+.location {
   /* width: 350px; */
   height: 200px;
   margin: auto;
@@ -1012,11 +1001,11 @@ li.tns-item{
   text-align: center;
 }
 
-.location p{
+.location p {
   font-size: 16px;
 }
 
-.card-title{
+.card-title {
   padding: 10px;
 }
 
@@ -1024,21 +1013,21 @@ li.tns-item{
   Event
 -----------------------*/
 
-#event{
+#event {
   text-align: center;
   padding: 50px;
   /* background-color: #e32879; */
 }
 
-#event h4{
-  color:#e32879;
+#event h4 {
+  color: #e32879;
   font-size: 32px;
   font-weight: 500;
   letter-spacing: normal;
 }
 
-#event p{
-  color:black;
+#event p {
+  color: black;
   text-align: justify;
   padding-top: 20px;
   margin: auto;
@@ -1051,183 +1040,176 @@ section.module.parallax-spl {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  background-image: url("https://images.unsplash.com/photo-1502957291543-d85480254bf8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80");;
+  background-image: url("https://images.unsplash.com/photo-1502957291543-d85480254bf8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80");
 }
-
 
 /*---------------------
  Initiatives Section
  ----------------------*/
- .program-section {
-	background:white;
-	padding:30px;
-}	
+.program-section {
+  background: white;
+  padding: 30px;
+}
 
- .program-card {
-	background-color: transparent;
-	width: 200px;
-	height: 200px;
-	perspective: 1000px;
-  }
+.program-card {
+  background-color: transparent;
+  width: 200px;
+  height: 200px;
+  perspective: 1000px;
+}
 
-  .program-card-inner {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	text-align: center;
-	transition: transform 0.6s;
-	transform-style: preserve-3d;
-	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  }
+.program-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
 
-  .program-card img{
-    height: 100px;
-    width: 100px;
-  }
+.program-card img {
+  height: 100px;
+  width: 100px;
+}
 
-  .program-card:hover .program-card-inner {
-	transform: rotateY(180deg);
-  }
-
-  .program-card-front, .program-card-back {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	-webkit-backface-visibility: hidden;
-	backface-visibility: hidden;
-  }
-
-  .program-card-back {
+.program-card:hover .program-card-inner {
   transform: rotateY(180deg);
-  }
+}
 
-  .inibtn{
-    padding: 18px 40px;
-    font-size: 16px;
-    border: none;
-    font-weight: 700;
-    outline: none;
-    border-radius: 30px;
-    margin-left: 20px;
-    cursor: pointer;
-    background-color: #f47621;
-    color: white;
-  }
-  
-  .inibtn:hover{
-    color: #f47621;
-    background-color: white;
-    border: 2px solid #f47621;
-  }
+.program-card-front,
+.program-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.program-card-back {
+  transform: rotateY(180deg);
+}
+
+.inibtn {
+  padding: 18px 40px;
+  font-size: 16px;
+  border: none;
+  font-weight: 700;
+  outline: none;
+  border-radius: 30px;
+  margin-left: 20px;
+  cursor: pointer;
+  background-color: #f47621;
+  color: white;
+}
+
+.inibtn:hover {
+  color: #f47621;
+  background-color: white;
+  border: 2px solid #f47621;
+}
 
 @media screen and (max-width: 1024px) {
- 
-    .center-div{
-        top:30%;
-    }
-    section.module.parallax-spl{
-        height:55vh;
-    }
+  .center-div {
+    top: 30%;
+  }
+  section.module.parallax-spl {
+    height: 55vh;
+  }
 }
 @media screen and (max-width: 770px) {
-
-    .center-div h1{
-        font-size: 40px;
-    }
-    .section-title h2{
-  font-size: 30px;
-    }
-    .vertical {
-      display:hidden;
-    }
- 
+  .center-div h1 {
+    font-size: 40px;
+  }
+  .section-title h2 {
+    font-size: 30px;
+  }
+  .vertical {
+    display: hidden;
+  }
 }
 @media screen and (max-width: 600px) {
-    section.module.parallax-spl{
-        height:70vh;
-    }
-    .center-div{
-        top:40%;
-    }
-
-    .section-title h2{
-     line-height: 1.5em;
-     text-align: center;
-    }
-    .counter-text .btn{
-        position: relative;
-        left: 50%;
-        transform: translateX(-50%);
-    }
- 
-    .vertical{
-        left:8%;
-        margin-top: 45%;
-        height:352px;
-    }
-    #footer-c{
-        text-align: center;
-    }
-    .border{
-        margin-left: 19%;
-    }
-}
-
-
-
-  /*-----------------
-  Achievements 
-  -------------------*/
-  .achieve{
-    background-color: #F5F5F5;
+  section.module.parallax-spl {
+    height: 70vh;
+  }
+  .center-div {
+    top: 40%;
   }
 
-  .atitle h2 {
-    font-size: 4vw;
-    color: black;
+  .section-title h2 {
+    line-height: 1.5em;
+    text-align: center;
+  }
+  .counter-text .btn {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
   }
 
   .vertical {
-    border-left: 6px solid #f47621;
-    height: 280px;
-    position: absolute;
-    left: 45%;
+    left: 8%;
+    margin-top: 45%;
+    height: 352px;
   }
-  
-  .counter-item .ci-number {
-    font-size: 46px;
-    color: black;
-    font-weight: 700;
-    line-height: 50px;
-    position: absolute;
-    left: 0;
-    top: 0;
+  #footer-c {
+    text-align: center;
   }
-  
-  .counter-item .ci-text h4 {
-    font-size: 22px;
-    color: black;
-    font-weight: 700;
-    margin-bottom: 12px;
+  .border {
+    margin-left: 19%;
   }
+}
 
-  .anibtn{
-    padding: 16px 30px;
-    font-size: 16px;
-    border: none;
-    font-weight: 700;
-    outline: none;
-    border-radius: 30px;
-    margin-left: 20px;
-    cursor: pointer;
-    background-color: #f47621;
-    color: white;
-  }
-  
-  .anibtn:hover{
-    color: #f47621;
-    background-color: white;
-    border: 2px solid #f47621;
-  }
-  
-  
+/*-----------------
+  Achievements 
+  -------------------*/
+.achieve {
+  background-color: #f5f5f5;
+}
+
+.atitle h2 {
+  font-size: 4vw;
+  color: black;
+}
+
+.vertical {
+  border-left: 6px solid #f47621;
+  height: 280px;
+  position: absolute;
+  left: 45%;
+}
+
+.counter-item .ci-number {
+  font-size: 46px;
+  color: black;
+  font-weight: 700;
+  line-height: 50px;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.counter-item .ci-text h4 {
+  font-size: 22px;
+  color: black;
+  font-weight: 700;
+  margin-bottom: 12px;
+}
+
+.anibtn {
+  padding: 16px 30px;
+  font-size: 16px;
+  border: none;
+  font-weight: 700;
+  outline: none;
+  border-radius: 30px;
+  margin-left: 20px;
+  cursor: pointer;
+  background-color: #f47621;
+  color: white;
+}
+
+.anibtn:hover {
+  color: #f47621;
+  background-color: white;
+  border: 2px solid #f47621;
+}
