--- a/css/index.css
+++ b/css/index.css
@@ -48,6 +48,9 @@ body{
     font-weight: bold;
     font-size: 250%;
 }
+.navbar-custom .navbar-brand:hover {
+        color: #33adff;
+    }
 
 #homeContent {
     text-align: center;
